<resources>
    <!--Views-->
    <string name="app_name">Rodeurs</string>
    <string name="sorcier">Sorcier</string>
    <string name="patate">Patate</string>
    <string name="guerrier">Guerrier</string>
    <string name="roll">Roll</string>
    <string name="fuir">Fuir</string>
    <string name="battre">Se battre</string>

    <!--Competences-->
    <string name="magie">Magie</string>
    <string name="chance">Chance</string>
    <string name="esquive">Esquive</string>
    <string name="force">Force</string>
    <string name="vie">Vie</string>
    <string name="defense">Defense</string>
    <string name="competences">Competences</string>

    <!--Actions-->
    <string name="lancez_les_d_s">Lancez le dé !</string>
    <string name="BackTo_aventure">Reprendre l\'aventure</string>


    <!--STATS JOUEUR-->
    <string name="joueur_niveau">1</string>
    <string name="joueur_nom">0</string>
    <string name="joueur_classe">0</string>
    <string name="joueur_magie">0</string>
    <string name="joueur_chance">0</string>
    <string name="joueur_esquive">0</string>
    <string name="joueur_force">0</string>
    <string name="joueur_vie">0</string>
    <string name="joueur_defense">0</string>
    <string name="joueur_xp">0</string>
    <string name="joueur_or">0</string>
    <string name="joueur_step">0</string>

    <!--DEFAULT-->

    <!--Guerrier Default-->
    <string name="guer_niveau">1</string>
    <string name="guer_classe">Guerrier</string>
    <string name="guer_magie">1</string>
    <string name="guer_chance">2</string>
    <string name="guer_esquive">3</string>
    <string name="guer_force">4</string>
    <string name="guer_vie">5</string>
    <string name="guer_defense">4</string>

    <!--Sorcier Default-->
    <string name="sorc_niveau">1</string>
    <string name="sorc_classe">Sorcier</string>
    <string name="sorc_magie">4</string>
    <string name="sorc_chance">3</string>
    <string name="sorc_esquive">3</string>
    <string name="sorc_force">1</string>
    <string name="sorc_vie">4</string>
    <string name="sorc_defense">2</string>

    <!--Patate Default-->
    <string name="pata_niveau">1</string>
    <string name="pata_classe">Patate</string>
    <string name="pata_magie">2</string>
    <string name="pata_chance">2</string>
    <string name="pata_esquive">2</string>
    <string name="pata_force">2</string>
    <string name="pata_vie">2</string>
    <string name="pata_defense">2</string>

    <string name="start_level">level depart</string>
    <string name="next_level">prochaine niveau</string>
    <string name="sons">Sons</string>
    <string name="title_activity_settings">acitivty_settings</string>
    <string name="title_activity_char">CharActivity</string>
    <string name="title_activity_level_">Level_Activity</string>
    <string name="vous_avez_gagnez_un_point_de_competence">Vous avez gagnez un point de compétence !</string>
    <string name="ou_souhaitez_vous_depenser_ce_point">Ou souhaitez vous depenser ce point ?</string>
    <string name="alive">Vous avez gagnez le combat !</string>
    <string name="finCombat">Fin du combat</string>
    <string name="levelup">Nouveau niveau dispo</string>
    <string name="stats">Stats</string>
    <string name="nom">Nom</string>
    <string name="pas">Pas</string>
    <string name="niveau">Niveau</string>
    <string name="or">Or</string>
    <string name="point">Point</string>
    <string name="sebattre">Se battre</string>
    <string name="wiki">wiki</string>
    <string name="acheter_de_la_vie">Acheter de la vie</string>
    <string name="acheter_un_niveau">Acheter un niveau</string>
    <string name="continuer">Continuer</string>
    <string name="vous_rencontrez_un_ami">Vous rencontrez un ami ...</string>
    <string name="vous_recontrez_un_ennemi">Vous recontrez un ennemi !</string>
    <string name="marcher">Marcher</string>
    <string name="vous_recontrez_un">Vous recontrez un ennemi !</string>
    <string name="un_monstre">Un monstre</string>
    <string name="vieMaxRestante">Vie restante</string>
    <string name="orgagne">Vous avez gagnés</string>
    <string name="gagnecombat">Vous avez vaincu le monstre !</string>
    <string name="vousetesmort">Vous êtes mort !</string>
    <string name="ressuciter">Ressuciter</string>
    <string name="perdu">Vous perdez de l\'or</string>
    <string name="valider">Valider</string>
    <string name="nom_de_votre_personnage_ici">Nom de votre personnage ici</string>
    <string name="activer_le_mode_developpeur">Activer le mode developpeur</string>
    <string name="statut_switch">Statut switch</string>
    <string name="Son">Son</string>
    <string name="modedeveloppeur">Mode developpeur</string>
    <string name="desactiv">Desactivé</string>
    <string name="a_propos">A propos</string>
    <string name="nouveau_personnage">Nouveau Personnage</string>
    <string name="options">Options</string>
    <string name="vous_marchez">Vous marchez...</string>
    <string name="effacer_les_donn_es">Effacer les données</string>
    <string name="vous_devrez_refaire_un_nouveau_personnage">Vous devrez refaire un nouveau personnage.</string>
    <string name="attention_vos_pas_seront_tre_reinitialis_s_pour_appliquer_les_changements">Attention ! Vos pas seront être reinitialisés pour appliquer les changements.</string>


</resources>
