<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dimsun.game.rodeur.NouveauPersonnageActivity">


    <EditText
        android:id="@+id/joueur_nom"
        android:hint="@string/nom_de_votre_personnage_ici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:id="@+id/statLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="top"
        android:orientation="horizontal">

        <!--STATS-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vie"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/force"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esquive"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magie"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance"/>


        </LinearLayout>

        <!-- CHIFFRES -->

        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/dataVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dataForce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dataDef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dataEsq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dataChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dataMagie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <!--IMAGE-->

         <ImageView
            android:id="@+id/still_char"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app_logo_small"
            />


    <!--CHOIX CLASSE-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            >

            <!--CHOIX CLASSE-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <Button
                    android:id="@+id/selectGuerrier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_menu_small"
                    android:text="@string/guerrier"
                    android:textColor="@color/coolgray"/>

                <Button
                    android:id="@+id/selectSorcier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_menu_small"
                    android:text="@string/sorcier"
                    android:textColor="@color/coolgray"/>

                <Button
                    android:id="@+id/selectPatate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_menu_small"
                    android:text="@string/patate"
                    android:textColor="@color/coolgray"/>
            </LinearLayout>
            <Button
                android:id="@+id/valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style_menu_shop"
                android:text="@string/valider"
                android:textColor="@color/coolgray"
                />
        </LinearLayout>
</LinearLayout>
