<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dimsun.game.rodeur.OptionActivity">


    <LinearLayout
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/modedeveloppeur"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/stateSwitchDevMode"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded"/>

        </LinearLayout>

        <Switch
            android:id="@+id/switchDevMode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:switchMinWidth="50dp"
            android:thumbTint="@color/bleufonce"
            android:layout_height="wrap_content"/>

        </LinearLayout>

         <TextView
            android:layout_marginLeft="16dp"
            android:text="@string/attention_vos_pas_seront_tre_reinitialis_s_pour_appliquer_les_changements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/Son"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/stateSwitchSon"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded"/>

            </LinearLayout>

            <Switch
                android:id="@+id/switchSon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:switchMinWidth="50dp"
                android:thumbTint="@color/bleufonce"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

</LinearLayout>
